--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     <div class="grid wow zoomIn">
 						<a href="https://regionradio.ru/">
 							<figure class="effect-bubba">
-								<img src="assets/images/regionradio.png" alt="img01"/>
+								<img src="assets/images/regionradio.jpg" alt="img01"/>
 								<figcaption>
 									<h2>Регион <span>Радио</span></h2>
 									<p>See more...</p>
@@ -229,7 +229,7 @@
                     <div class="grid wow zoomIn">
 						<a href="https://smorodina-outdoor.ru/">
 							<figure class="effect-bubba">
-								<img src="assets/images/smorodina.png" alt="img01"/>
+								<img src="assets/images/smorodina.jpg" alt="img01"/>
 								<figcaption>
 									<h2><span>Smorodina</span></h2>
 									<p>See more...</p>
@@ -243,7 +243,7 @@
                     <div class="grid wow zoomIn">
 						<a href="https://fm-hitek.ru/">
 							<figure class="effect-bubba">
-								<img src="assets/images/hitek.png" alt="img01"/>
+								<img src="assets/images/hitek.jpg" alt="img01"/>
 								<figcaption>
 									<h2>Кухни <span>хайтек</span></h2>
 									<p>See more...</p>
@@ -257,7 +257,7 @@
                     <div class="grid wow zoomIn">
 						<a href="https://okna-opt.ru/">
 							<figure class="effect-bubba">
-								<img src="assets/images/okna-opt.png" alt="img01"/>
+								<img src="assets/images/okna-opt.jpg" alt="img01"/>
 								<figcaption>
 									<h2><span>окнаопт</span></h2>
 									<p>See more...</p>
@@ -271,7 +271,7 @@
                     <div class="grid wow zoomIn">
 						<a href="https://окнастрой72.рф/">
 							<figure class="effect-bubba">
-								<img src="assets/images/oknastroi.png" alt="img01"/>
+								<img src="assets/images/oknastroi.jpg" alt="img01"/>
 								<figcaption>
 									<h2><span>окнастрой</span></h2>
 									<p>See more...</p>
@@ -285,7 +285,7 @@
                     <div class="grid wow zoomIn">
 						<a href="https://тцсм.рф/">
 							<figure class="effect-bubba">
-								<img src="assets/images/tcsm.png" alt="img01"/>
+								<img src="assets/images/tcsm.jpg" alt="img01"/>
 								<figcaption>
 									<h2>Тюменский <span>ЦСМ</span></h2>
 									<p>See more...</p>
@@ -299,7 +299,7 @@
                     <div class="grid wow zoomIn">
 						<a href="https://остров-72.рф/">
 							<figure class="effect-bubba">
-								<img src="assets/images/ostrov.png" alt="img01"/>
+								<img src="assets/images/ostrov.jpg" alt="img01"/>
 								<figcaption>
 									<h2>остров <span>детства</span></h2>
 									<p>See more...</p>
@@ -313,7 +313,7 @@
                     <div class="grid wow zoomIn">
 						<a href="https://stom72.ru/">
 							<figure class="effect-bubba">
-								<img src="assets/images/stom72.png" alt="img01"/>
+								<img src="assets/images/stom72.jpg" alt="img01"/>
 								<figcaption>
 									<h2>Стоматология <span>Марина</span></h2>
 									<p>See more...</p>
@@ -327,7 +327,7 @@
                     <div class="grid wow zoomIn">
 						<a href="http://goodw.ru/">
 							<figure class="effect-bubba">
-								<img src="assets/images/Goodwork.png" alt="img01"/>
+								<img src="assets/images/Goodwork.jpg" alt="img01"/>
 								<figcaption>
 									<h2><span>goodwork</span></h2>
 									<p>See more...</p>
@@ -336,13 +336,12 @@
 						</a>
                     </div>
 				</div>
-
 				
 				<div class="col-xs-12 col-sm-4 col-md-4">
 					<div class="grid wow zoomIn">
 						<a href="http://bar-tm.ru/">
 							<figure class="effect-bubba">
-								<img src="assets/images/bar.png" alt="img01"/>
+								<img src="assets/images/bar.jpg" alt="img01"/>
 								<figcaption>
 									<h2><span>bar service</span></h2>
 									<p>See more...</p>
@@ -370,7 +369,7 @@
 					<div class="grid wow zoomIn">
 						<a href="https://двернойпрофи.рф">
 							<figure class="effect-bubba">
-								<img src="assets/images/doors.png" alt="img01"/>
+								<img src="assets/images/doors.jpg" alt="img01"/>
 								<figcaption>
 									<h2><span>Двернойпрофи</span></h2>
 									<p>See more...</p>
