Добавил блок с репо

--- a/index.html
+++ b/index.html
@@ -176,6 +176,26 @@
 		</div>
 	</section>
 
+	<section class="github">
+		<div class="container"></div>
+			<div class="row">
+
+				<div class="col-sm-6 col-sm-offset-3">
+
+					<div class="pfblock-header wow fadeInUp">
+						<h2 class="pfblock-title">Check my github</h2>
+						<div class="pfblock-line"></div>
+						<div class="pfblock-subtitle">
+							<a target="_blank" href="https://github.com/skyworkerxsky">github.com/skyworkerxsky</a>
+						</div>
+					</div>
+
+				</div>
+
+			</div>
+		</div>
+	</section>
+
 	<section id="portfolio" class="pfblock">
 		<div class="container">
 			<div class="row">
