--- a/index.html
+++ b/index.html
@@ -176,13 +176,13 @@
 		</div>
 	</section>
 
-	<section class="github">
+	<section class="github wow fadeInUp">
 		<div class="container"></div>
 			<div class="row">
 
 				<div class="col-sm-6 col-sm-offset-3">
 
-					<div class="pfblock-header wow fadeInUp">
+					<div class="pfblock-header ">
 						<h2 class="pfblock-title">Check my github</h2>
 						<div class="pfblock-line"></div>
 						<div class="pfblock-subtitle">
