--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
 
 				<div class="col-sm-6 col-sm-offset-3">
 
-					<form id="contact-form" role="form">
+					<form action="https://formspree.io/skyworkerxsky111@gmail.com" method="POST">
 						<div class="ajax-hidden">
 							<div class="form-group wow fadeInUp">
 								<label class="sr-only" for="c_name">Name</label>
@@ -586,11 +586,9 @@
 				<div class="col-sm-12">
 
 					<ul class="social-links">
-						<li><a href="index.html#" class="wow fadeInUp"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".1s"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".2s"><i class="fa fa-google-plus"></i></a></li>
-						<li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".4s"><i class="fa fa-pinterest"></i></a></li>
-						<li><a href="index.html#" class="wow fadeInUp" data-wow-delay=".5s"><i class="fa fa-envelope"></i></a></li>
+						<li><a href="viber://chat?number=+79963209313" class="wow fadeInUp" data-wow-delay=".3s"><i class="fa fa-whatsapp" aria-hidden="true"></i></a></li>
+						<li><a href="tg://resolve?domain=skyworkerxsky" class="wow fadeInUp" data-wow-delay=".4s"><i class="fa fa-telegram"></i></a></li>
+						<li><a href="mailto:skyworkerxsky111@gmail.com" class="wow fadeInUp" data-wow-delay=".5s"><i class="fa fa-envelope"></i></a></li>
 					</ul>
 
                     <p class="copyright">
