--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Test Redirect</title>
-	<script src="index.js"></script>
+	<script src="index.js"></script>	
 </head>
-<body style="background-color: pink;">
-	
+<body style="background-color: red;">
+	<h1 style="color: white">Домашний</h1>
 </body>
 </html>
