--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Test Redirect</title>
 	<script src="index.js"></script>	
 </head>
-<body style="background-color: red;">
+<body style="background-color: green;">
 	<h1 style="color: white">Домашний</h1>
 </body>
 </html>
