--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Test Redirect</title>
 		
 </head>
-<body style="background-color: yellowgreen;">
+<body style="background-color: deeppink;">
 	<h1 style="color: white">Домашний</h1>
 </body>
 <script src="index.js"></script>
